# Lab2

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  GUI.h  Main.cpp  Students.cpp  Students.h  Tests.cpp  Tests.h
Sorts/: BubbleSorter.h  HeapSorter.h  ISorter.h  QuickSorter.h
